------------------------------------------------------------------------------
rsnapshot changelog
http://www.rsnapshot.org/
------------------------------------------------------------------------------

VERSION 1.1.2 (??? ?? ??:?? 2004)
------------------------------------------------------------------------------
- Fixed a slightly inconvenient permissions issue in rsnaptar
- Added support for arbitrary arguments to backup_script files

VERSION 1.1.1 (Feb 11 23:24 2004)
------------------------------------------------------------------------------
- Changed some fatal errors to warnings in some recursive subroutines
- Added optional GPG support to the rsnaptar utility shell script

VERSION 1.1.0 (Jan 24 16:41 2004)
------------------------------------------------------------------------------
- The first interval must now have a value of at least 2 if more than one
  interval is being used
- Now allows "/" as a backup point on the local drive
- Cleaned up command formatting to consolidate slashes
- Added subroutines for centralized print/logging
- Added logfile and loglevel parameters to the config file
- Added logging feature
- Moved loglevel/verbose number validation into a seperate subroutine
- Added much more error checking on the config file
- Changed @snapshot_points to @backup_points for more consistent terminology
- Made all "-x" executable checks also check for "-f" file
- Made rsync error messages report the full path to rsync and the correct
  return value
- Fixed minor screen formatting issue with print_cmd() subroutine where it
  could line wrap the first element of a command
- Changed exit error code from -1 (255) to 1, to be more standard
- Added include, exclude, include_file, and exclude_file params
- Fixed bug where not all locally specified backup options would be parsed
- Replaced calls to bail() from config parsing code with config_err() calls
- Added directory traversal checks for commands